<resources>
    <string name="app_name" translatable="false">FarmaciaRikas</string>
    <string name="title_activity_alumno_menu">MedicamentoMenuActivity</string>
    <string name="title_activity_nota_menu">DoctorMenuActivity</string>
    <string name="title_activity_materia_menu">LocalMenuActivity</string>
    <string name="title_activity_medicamento_insertar">MedicamentoInsertarActivity</string>
    <string name="title_activity_medicamento_eliminar">MedicamentoEliminarActivity</string>
    <string name="title_activity_medicamento_actualizar">MedicamentoActualizarActivity</string>
    <string name="title_activity_medicamento_consultar">MedicamentoConsultarActivity</string>
    <string name="title_activity_doctor_insertar">DoctorInsertarActivity</string>
    <string name="title_activity_doctor_eliminar">DoctorEliminarActivity</string>
    <string name="title_activity_doctor_actualizar">DoctorActualizarActivity</string>
    <string name="title_activity_doctor_consultar">DoctorConsultarActivity</string>
    <string name="title_activity_local_insertar">LocalInsertarActivity</string>
    <string name="title_activity_local_eliminar">LocalEliminarActivity</string>
    <string name="title_activity_local_actualizar">LocalActualizarActivity</string>
    <string name="title_activity_local_consultar">LocalConsultarActivity</string>
    <string name="medicamento_menu">Función a Ejecutar Medicamento</string>
    <string name="doctor_menu">Función a Ejecutar Doctor</string>
    <string name="local_menu">Función a Ejecutar Local</string>
    <string name="insertar_registro">Insertar Registro</string>
    <string name="eliminar_registro">Eliminar Registro</string>
    <string name="consultar_registro">Consultar Registro</string>
    <string name="actualizar_registro">Actualizar Registro</string>
    <string name="idMedicamento">Codigo</string>
    <string name="codElemento">Codigo Elemento</string>
    <string name="nombreMedicamento">Nombre medicamento</string>
    <string name="cantidad">Cantidad</string>
    <string name="descripcion">Descripción</string>
    <string name="precioUni">Precio Unitario</string>
    <string name="unidad">Unidad</string>
    <string name="codLaboratorio">Codigo Laboratorio</string>
    <string name="viaAdministracion">Via de administracion</string>
    <string name="formaFarmaceutica">Forma Farmaceutica</string>
    <string name="idLaboratorio">Codigo laboratorio</string>
    <string name="insertar">Insertar</string>
    <string name="eliminar">Eliminar</string>
    <string name="eliminar2">EliminarV2</string>
    <string name="actualizar">Actualizar</string>
    <string name="consultar">Consultar</string>
    <string name="idLocal">Codigo Local</string>
    <string name="idUbicacion">Codigo Ubicacion</string>
    <string name="nombreLocal">Nombre</string>
    <string name="tipo">Tipo</string>
    <string name="telefonoLocal">Telefono</string>
    <string name="limpiar">Limpiar</string>
    <string name="idDoctor">Codigo</string>
    <string name="nombreDoctor">Nombre</string>
    <string name="especialidad">Especialidad</string>
    <string name="jvpm">JVPM</string>
    <string name="telefonoDoctor">Telefono</string>
    <string name="correo">Correo</string>
    <string name="Usuario">Usuario</string>
    <string name="login">Iniciar Sesión</string>
    <string name="password">Contraseña</string>
    <string name="opciones">Opciones:</string>
    <string-array name="menu_items_mm22108">
        <item>Tabla Cliente</item>
        <item>Tabla Distribuidor</item>
        <item>Tabla Detalle Receta</item>
    </string-array>
    <string-array name="menu_items_cliente">
        <item>Crear Cliente</item>
        <item>Consultar Cliente</item>
        <item>Actualizar Cliente</item>
        <item>Eliminar Cliente</item>
    </string-array>
    <string name="dialog_title_info_ingreso">Ingresar Cliente</string>
    <string name="dialog_msg_cliente_guardado">Cliente guardado exitosamente</string>
    <string name="dialog_msg_error_guardar_cliente">Error al guardar cliente</string>
    <string name="dialog_btn_aceptar">Aceptar</string>
    <string name="msg_campos_obligatorios">Por favor complete los campos obligatorios</string>
    <string name="msg_campos_invalidos">Por favor complete los campos correctamente</string>
    <string name="InsertarCliente_titulo">Crear Cliente</string>
    <string name="InsertarCliente_hint_dui">Ingrese DUI</string>
    <string name="InsertarCliente_hint_nombre">Ingrese Nombre</string>
    <string name="InsertarCliente_hint_apellido">Ingrese Apellido</string>
    <string name="InsertarCliente_hint_telefono">Ingrese Teléfono</string>
    <string name="InsertarCliente_hint_correo">Ingrese Correo Electrónico</string>
    <string name="InsertarCliente_btn_guardar">Guardar</string>
    <string name="EliminarCliente_titulo">Eliminar Cliente</string>
    <string name="dialog_title_info_eliminar">Eliminar Cliente</string>
    <string name="EliminarCliente_hint_dui">Ingrese DUI</string>
    <string name="EliminarCliente_btn_eliminar">Eliminar Cliente</string>
    <string name="dialog_msg_cliente_eliminado">Cliente eliminado exitosamente</string>
    <string name="dialog_msg_error_eliminar_cliente">No se pudo eliminar el cliente</string>
    <string name="ConsultarCliente_titulo">Consultar Cliente</string>
    <string name="ConsultarCliente_hint_dui">Ingrese DUI</string>
    <string name="ConsultarCliente_hint_nombre">Nombre del Cliente</string>
    <string name="ConsultarCliente_hint_apellido">Apellido del Cliente</string>
    <string name="ConsultarCliente_hint_telefono">Teléfono del Cliente</string>
    <string name="ConsultarCliente_hint_correo">Correo Buscardel Cliente</string>
    <string name="ConsultarCliente_btn_consultar">Buscar</string>
    <string name="dialog_title_info_consultar">Información</string>
    <string name="dialog_msg_cliente_no_encontrado">Cliente no encontrado</string>
    <string name="dialog_msg_cliente_encontrado">Cliente encontrado</string>
    <string name="ActualizarCliente_titulo">Actualizar Cliente</string>
    <string name="ActualizarCliente_hint_dui">Ingrese DUI</string>
    <string name="ActualizarCliente_hint_nombre">Nombre del Cliente</string>
    <string name="ActualizarCliente_hint_apellido">Apellido del Cliente</string>
    <string name="ActualizarCliente_hint_telefono">Teléfono del Cliente</string>
    <string name="ActualizarCliente_hint_correo">Correo Buscardel Cliente</string>
    <string name="ActualizarCliente_btn_buscar">Buscar</string>
    <string name="ActualizarCliente_btn_actualizar">Actualizar</string>
    <string name="dialog_title_info_actualizar">Información</string>
    <string name="dialog_msg_cliente_actualizado">Cliente actualizado existosamente</string>
    <string-array name="menu_items_distribuidor">
        <item>Crear Distribuidor</item>
        <item>Consultar Distribuidor</item>
        <item>Actualizar Distribuidor</item>
        <item>Eliminar Distribuidor</item>
    </string-array>
    <string name="InsertarDistribuidor_titulo">Crear Distribuidor</string>
    <string name="InsertarDistribuidor_hint_id">Ingrese ID</string>
    <string name="InsertarDistribuidor_hint_marca">Ingrese Marca</string>
    <string name="InsertarDistribuidor_hint_nombre">Ingrese Nombre</string>
    <string name="InsertarDistribuidor_hint_telefono">Ingrese Teléfono</string>
    <string name="InsertarDistribuidor_hint_nit">Ingrese NIT</string>
    <string name="InsertarDistribuidor_hint_correo">Ingrese Correo Electrónico</string>
    <string name="InsertarDistribuidor_btn_guardar">Guardar</string>
    <string name="dialog_msg_distribuidor_guardado">Distribuidor guardado exitosamente</string>
    <string name="dialog_msg_error_guardar_distribuidor">Error al guardar Distribuidor</string>
    <string name="EliminarDistribuidor_titulo">Eliminar Distribuidor</string>
    <string name="EliminarDistribuidor_hint_id">Ingrese ID</string>
    <string name="EliminarDistribuidor_btn_eliminar">Eliminar Distribuidor</string>
    <string name="dialog_msg_distribuidor_eliminado">Distribuidor eliminado exitosamente</string>
    <string name="dialog_msg_error_eliminar_distribuidor">Error al eliminar Distribuidor</string>
    <string name="ConsultarDistribuidor_titulo">Consultar Distribuidor</string>
    <string name="ConsultarDistribuidor_hint_id">Ingrese ID</string>
    <string name="ConsultarDistribuidor_hint_marca">Marca del Distribuidor</string>
    <string name="ConsultarDistribuidor_hint_nombre">Nombre del Distribuidor</string>
    <string name="ConsultarDistribuidor_hint_telefono">Teléfono del Distribuidor</string>
    <string name="ConsultarDistribuidor_hint_nit">NIT del Distribuidor</string>
    <string name="ConsultarDistribuidor_hint_correo">Correo Electrónico del Distribuidor</string>
    <string name="ConsultarDistribuidor_btn_consultar">Buscar</string>
    <string name="dialog_msg_distribuidor_consultar">Distribuidor encontrado exitosamente</string>
    <string name="dialog_msg_error_consultar_distribuidor">Error al encontrar Distribuidor</string>
    <string name="ActualizarDistribuidor_titulo">Actualizar Distribuidor</string>
    <string name="ActualizarDistribuidor_hint_id">Ingrese ID</string>
    <string name="ActualizarDistribuidor_hint_marca">Marca del Distribuidor</string>
    <string name="ActualizarDistribuidor_hint_nombre">Nombre del Distribuidor</string>
    <string name="ActualizarDistribuidor_hint_telefono">Teléfono del Distribuidor</string>
    <string name="ActualizarDistribuidor_hint_nit">NIT del Distribuidor</string>
    <string name="ActualizarDistribuidor_hint_correo">Correo Electrónico del Distribuidor</string>
    <string name="idMarca">Marca ID:</string>
    <string name="nombreMarca">Nombre Marca:</string>
    <string name="idLabo">Laboratorio ID:</string>
    <string name="laboratorioNombre">Nombre Laboratorio:</string>
    <string name="laboratorioTipo">Tipo De Laboratorio:</string>
    <string name="laboratorioTelefono">Telefono Laboratorio:</string>
    <string name="idDepartamentoDpto">ID del Departamento:</string>
    <string name="nombreDpto">Nombre del Departamento:</string>
    <string name="idMunicipioMun">ID del Municipio:</string>
    <string name="idDepartamentoMun">ID del Departamento:</string>
    <string name="nombreMun">Nombre del Municipio:</string>
    <string name="idDistrito">ID del Distrito:</string>
    <string name="idMunicipioDist">ID del Municipio:</string>
    <string name="nombreDist">Nombre del Distrito:</string>
    <string name="InsertarLaboratorio">Insertar Laboratorio</string>
    <string name="InsertarDistrito">Insertar Distrito</string>
    <string name="ActualizarMarca">Actualizar Marca</string>
    <string name="ActualizarLabo">Actualizar Laboratorio</string>
    <string name="ActualizarDepartamento">Actualizar Departamento</string>
    <string name="ActualizarMunicipio">Actualizar Municipio</string>
    <string name="ActualizarDistrito">Actualizar Distrito</string>
    <string name="EliminarDepartamento">Eliminar Departamento</string>
    <string name="InsertarDatos">Insertar</string>
    <string name="ActualizarDatos">Actualizar</string>
    <string name="ConsultarDatos">Consultar</string>
    <string name="EliminarDatos">Eliminar</string>
    <string name="LimpiarCampos">Limpiar</string>
    <string name="registro_de_articulo">Registro de Articulo</string>
    <string name="id_articulo">ID Articulo</string>
    <string name="id_distribuidor">ID Distribuidor</string>
    <string name="nombre_articulo">Nombre Articulo</string>
    <string name="clasificacion">Clasificacion</string>
    <string name="registrar_articulo">Registrar Articulo</string>
    <string name="id_elemento">ID Elemento</string>
    <string name="nombre_elemento">Nombre Elemento</string>
    <string name="cantidad_elemento">Cantidad</string>
    <string name="precio_unitario">Precio Unitario</string>
    <string name="unidades">Unidades</string>
</resources>