<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/idLocal" />
        <EditText
            android:id="@+id/editLocal"
            android:inputType="text"
            android:maxLength="4" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/idUbicacion" />
        <EditText
            android:id="@+id/editUbicacion"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nombreLocal" />
        <EditText
            android:id="@+id/editNombre"
            android:inputType="text"
            android:maxLength="5" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/tipo" />

        <EditText
            android:id="@+id/editTipo"
            android:inputType="text" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/telefonoLocal" />
        <EditText
            android:id="@+id/editTelefono"
            android:inputType="text"
            android:maxLength="8" />
    </TableRow>
    <TableRow>

        <Button
            android:onClick="actualizarLocal"
            android:text="@string/actualizar" />
    </TableRow>

    <TableRow>

        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>

</TableLayout>