<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Encabezado con icono y título -->
        <LinearLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_agregararticulo"
                android:contentDescription="Icono Stock"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registro_de_articulo"
                android:textSize="24sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <!-- Campos del formulario -->
        <EditText
            android:id="@+id/etIdArticulo"
            android:hint="@string/id_articulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etIdDistribuidor"
            android:hint="@string/id_distribuidor"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etnombreArticulo"
            android:hint="@string/nombre_articulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etClasificacion"
            android:hint="@string/clasificacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etIdElemento"
            android:inputType="number"
            android:hint="@string/id_elemento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etNombreElemento"
            android:hint="@string/nombre_elemento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etCantidadElemento"
            android:inputType="number"
            android:hint="@string/cantidad_elemento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etDescripcionElemento"
            android:hint="@string/descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etPrecioUnitarioElemento"
            android:inputType="number"
            android:hint="@string/precio_unitario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etUnidadesElemento"
            android:hint="@string/unidades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnInsertar"
            android:onClick="registrarArticulo"
            android:text="@string/registrar_articulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</ScrollView>