<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1"
    tools:context=".MunicipioActualizarActivity">

    <TableRow>
        <TextView
            android:id="@+id/muniActu"
            android:text="@string/ActualizarMunicipio"
            android:textSize="24sp"
            android:textStyle="bold"/>
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/muniIdActu"
            android:text="@string/idMunicipioMun"
            />
        <EditText
            android:id="@+id/muniIdActuEdit"
            android:inputType="number"
            android:maxLength="10"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/depMuniIdActu"
            android:text="@string/idDepartamentoMun"
            />
        <EditText
            android:id="@+id/depMuniIdActuEdit"
            android:inputType="number"
            android:maxLength="10"
            />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/muniConsBtn"
            android:onClick="consMuni"
            android:text="@string/ConsultarDatos" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/muniNomActu"
            android:text="@string/nombreMun"
            />
        <EditText
            android:id="@+id/muniNomActuEdit"
            android:inputType="text"
            android:maxLength="30"
            />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/muniActuBtn"
            android:onClick="actuCampos"
            android:text="@string/ActualizarDatos"
            />

        <Button
            android:id="@+id/muniActuBtnTxt"
            android:onClick="limpiarCampos"
            android:text="@string/LimpiarCampos"
            />
    </TableRow>

</TableLayout>