<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"

    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1"

    tools:context=".MarcaActualizarActivity">

    <TableRow>
        <TextView
            android:id="@+id/marcaActu"
            android:text="@string/ActualizarMarca"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/marcaIdActu"
            android:text="@string/idMarca"/>
        <EditText
            android:id="@+id/marcaIdActuEdit"
            android:inputType="number"
            android:maxLength="8"
            />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/marcaActuIDBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="consultarmarca"
            android:text="@string/ConsultarDatos"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/marcaActuTxt"
            android:text="@string/nombreMarca"
            />
        <EditText
            android:id="@+id/marcaActuEdit"
            android:inputType="text"
            android:maxLength="30"
            />
    </TableRow>

    <TableRow style="?android:attr/buttonBarStyle">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/marcaActuBtn"
            android:onClick="ActuMarca"
            android:text="@string/ActualizarDatos" />

        <Button
            android:id="@+id/marcaActuTxtBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="limpiarCampos"
            android:text="@string/LimpiarCampos"
            />

    </TableRow>

</TableLayout>