<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"

    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1"
    tools:context=".DepartamentoEliminarActivity">

    <TableRow>
        <TextView
            android:id="@+id/dptoCons"
            android:text="@string/EliminarDepartamento"
            android:textSize="24sp"
            android:textStyle="bold"/>

    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/dptoIdElim"
            android:text="@string/idDepartamentoDpto"
            />

        <Spinner
            android:id="@+id/spinIdElim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TouchTargetSizeCheck" />

    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/dptoElimBtn"
            android:onClick="elimDpto"
            android:text="@string/EliminarDatos" />
    </TableRow>

</TableLayout>